--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,57 @@
-# Prerequisites
+# Prerequisites / Dependency files
 *.d
 
-# Compiled Object files
-*.slo
-*.lo
+# Compiled Object Files
 *.o
 *.obj
+*.lo
+*.slo
 
 # Precompiled Headers
 *.gch
 *.pch
 
-# Linker files
-*.ilk
+# Static Libraries
+*.a
+*.lib
+*.la
+*.lai
 
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
+# Dynamic Libraries
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
 
-# debug information files
+# Linker Files
+*.ilk
+
+# Debugger Files
+*.pdb
 *.dwo
+
+# Fortran Modules (if ever used)
+*.mod
+*.smod
+
+# VS Code
+.vscode/
+
+# Make / CMake backup or intermediate files
+CMakeFiles/
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+build/
+
+# Log / temp files
+*.log
+*.tmp
+
+# OS-specific
+.DS_Store
+Thumbs.db
