refactor(social_network): improve memory safety and performance
- Replaced map lookups with pointer-based access for efficiency
- Removed try/catch in favor of enum-based FriendResult for clearer control flow
- Reduced redundant allocations and improved memory locality
- Simplified logic and improved code readability

--- a/social_network_mini/Makefile
+++ b/social_network_mini/Makefile
@@ -20,7 +20,7 @@ release: CXXFLAGS += -O3
 release: $(TARGET)
 
 # Debug
-debug: CXXFLAGS += -O0 -DDEBUG
+debug: CXXFLAGS += -O0 -DDEBUG -g
 debug: $(TARGET)
 
 $(TARGET): $(OBJS)
