--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,11 @@
 # Make / CMake backup or intermediate files
 CMakeFiles/
 CMakeCache.txt
+# Makefile
 cmake_install.cmake
 build/
+*.json
+*social_network_mini/main
 
 # Log / temp files
 *.log
